[package]
name = "ffi-gen"
version = "0.1.0"
edition = "2021"
description = "Call rust from any language."
repository = "https://github.com/cloudpeers/ffi-gen"
license = "MIT"

[dependencies]
anyhow = "1.0.47"
genco = "0.15.1"
pest = "2.1.3"
pest_derive = "2.1.0"
tempfile = "3.2.0"

[dev-dependencies]
trybuild = "1.0.52"
