[workspace]
members = [".", "macro", "example/rust"]

[package]
name = "ffi-gen"
version = "0.1.0"
edition = "2021"
description = "Call rust from any language."
repository = "https://github.com/cloudpeers/ffi-gen"
license = "MIT"

[features]
test_runner = ["tempfile", "trybuild"]

[dependencies]
anyhow = "1.0.47"
genco = "0.15.1"
pest = "2.1.3"
pest_derive = "2.1.0"
tempfile = { version = "3.2.0", optional = true }
trybuild = { version = "1.0.52", optional = true }

[dev-dependencies]
ffi-gen = { path = ".", features = ["test_runner"] }
