[workspace]
members = [".", "macro", "example"]

[package]
name = "ffi-gen"
version = "0.1.13"
edition = "2021"
description = "Call rust from any language."
repository = "https://github.com/cloudpeers/ffi-gen"
license = "MIT"

[features]
default = []
test_runner = ["tempfile", "trybuild"]

[dependencies]
anyhow = "1.0.51"
genco = "0.15.1"
heck = "0.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
tempfile = { version = "3.2.0", optional = true }
trybuild = { version = "1.0.53", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.78"
optional = true

[dev-dependencies]
ffi-gen = { path = ".", features = ["test_runner"] }
futures = "0.3.17"
